--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Autoplay YouTube Video</title>
+    <title>americ anfootball</title>
 </head>
 <body>
     <h1>Real site is currently down</h1>
